# pythonthread

./: README.md  historiador.txt  log.txt  pyproject.toml  trabalho_atr_pt_1.py
