[tool.poetry]
name = "tp1 - julia rezende"
version = "0.1.0"
description = ""
authors = ["julia.rocha <julia.rocha@smarttbotter.com>"]

[tool.poetry.dependencies]
python = "^3.6"
simple-pid = "^0.2.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
